base: records info text overflow fix
* Adds word wrap in records info. (closes #101)

--- a/zenodo/base/static/less/zenodo.less
+++ b/zenodo/base/static/less/zenodo.less
@@ -672,6 +672,9 @@ h1, h2, h3 {
     display: inline;
 }
 
+.metadata {
+  word-wrap: break-word;
+}
 
 .metadata dt {
   font-weight: bold;
